After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690612 - grilo: Explain why module could not be loaded
grilo: Explain why module could not be loaded
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-21 14:25 UTC by Bastien Nocera
Modified: 2013-01-04 09:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
grilo: Explain why module could not be loaded (972 bytes, patch)
2012-12-21 14:25 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-12-21 14:25:30 UTC
.
Comment 1 Bastien Nocera 2012-12-21 14:25:32 UTC
Created attachment 232062 [details] [review]
grilo: Explain why module could not be loaded

Note that g_module_error() already contains the filename that
failed to be loaded.
Comment 2 Juan A. Suarez Romero 2013-01-04 09:59:25 UTC
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Dec 21 14:39:45 2012 +0100

    core: Explain why module could not be loaded
    
    Note that g_module_error() already contains the filename that
    failed to be loaded.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=690612

 src/grl-registry.c |    2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)