core: Explain why module could not be loaded

Note that g_module_error() already contains the filename that
failed to be loaded.

https://bugzilla.gnome.org/show_bug.cgi?id=690612